[gd_scene load_steps=9 format=2]

[ext_resource path="res://Oven.gd" type="Script" id=1]
[ext_resource path="res://scenes/furniture/ProgressBarControl.gd" type="Script" id=2]
[ext_resource path="res://assets/sound/frying.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/ui/progressbar_top_1.png" type="Texture" id=4]
[ext_resource path="res://assets/furniture/oven.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/progressbar_over_1.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.5, 3.9375 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 3.25 )

[node name="Oven" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 5 )
offset = Vector2( 0, 10 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 20 )
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 0, 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, -1.75 )
shape = SubResource( 2 )

[node name="ProgressBarControl" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -29.0
margin_right = 20.0
margin_bottom = -24.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="ProgressBarControl"]
anchor_left = 0.5
anchor_top = 0.3
anchor_right = 0.5
anchor_bottom = 0.3
margin_left = -16.0
margin_top = -2.5
margin_right = 16.0
margin_bottom = 2.5
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BakeTimer" type="Timer" parent="ProgressBarControl"]
wait_time = 0.05

[connection signal="value_changed" from="ProgressBarControl/TextureProgress" to="." method="_on_TextureProgress_value_changed"]
[connection signal="timeout" from="ProgressBarControl/BakeTimer" to="ProgressBarControl" method="_on_Timer_timeout"]
